--- a/index.html
+++ b/index.html
@@ -1,52 +1,21 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>SkEvents by PsYZiiKMC</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<h1>Skript Documentation</h1>
 
-  </head>
-  <body>
+<p>
+  Skript is a (surprise, surprise) a scripting plugin for Bukkit platform. It
+  is easy to use for simple tasks, but yet you can create really complex things
+  with it. The syntax of Skript is close to English, but it is still not magic.
+  While for simple tasks you might succeed with experimentation, for anything
+  more complex you will need some guidance.
+</p>
 
-      <header>
-        <h1>SkEvents</h1>
-        <p>La documentation sur tous les événements de Skript !</p>
-      </header>
+<p>
+  This is Skript documentation. You will find all supported features of Skript
+  plugin here. You might also find some useful examples, in case you need more
+  than what was shipped with Skript distribution. We do not currently have
+  tutorial here, but you can find good ones using (whatever) search engine you prefer.
+</p>
 
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/PsYZiiKMC/SkEvents" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/PsYZiiKMC/SkEvents/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/PsYZiiKMC/SkEvents/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <p>Ceci n'est rien d'autre qu'un test !</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/PsYZiiKMC">PsYZiiKMC</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
-</html>
+<p class="box">
+  Found something incorrent in this documentation? Please report
+  it to <a href="https://github.com/bensku/Skript/issues">issue tracker</a>.
+</p>
