--- a/index.html
+++ b/index.html
@@ -1,21 +1,67 @@
-<h1>Skript Documentation</h1>
+<!doctype html>
+<!--
 
-<p>
-  Skript is a (surprise, surprise) a scripting plugin for Bukkit platform. It
-  is easy to use for simple tasks, but yet you can create really complex things
-  with it. The syntax of Skript is close to English, but it is still not magic.
-  While for simple tasks you might succeed with experimentation, for anything
-  more complex you will need some guidance.
-</p>
+  Instructions:
 
-<p>
-  This is Skript documentation. You will find all supported features of Skript
-  plugin here. You might also find some useful examples, in case you need more
-  than what was shipped with Skript distribution. We do not currently have
-  tutorial here, but you can find good ones using (whatever) search engine you prefer.
-</p>
+  - Save this file.
+  - Replace "USER" with your GitHub username.
+  - Replace "REPO" with your GitHub repo name.
+  - Replace "Your Project" with your project name.
+  - Upload this file (or commit to GitHub Pages).
 
-<p class="box">
-  Found something incorrent in this documentation? Please report
-  it to <a href="https://github.com/bensku/Skript/issues">issue tracker</a>.
-</p>
+  Customize as you see fit!
+
+-->
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
+
+  <title>SkEvents</title>
+
+  <!-- Flatdoc -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js'></script>
+  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js'></script>
+
+  <!-- Flatdoc theme -->
+  <link  href='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css' rel='stylesheet'>
+  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js'></script>
+
+  <!-- Meta -->
+  <meta content="Your Project" property="og:title">
+  <meta content="Your Project description goes here." name="description">
+
+  <!-- Initializer -->
+  <script>
+    Flatdoc.run({
+      fetcher: Flatdoc.github('PsYZiiK/SkEvents')
+    });
+  </script>
+</head>
+<body role='flatdoc'>
+
+  <div class='header'>
+    <div class='left'>
+      <h1>Your Project</h1>
+      <ul>
+        <li><a href='https://github.com/PsYZiiK/SkEvents'>View on GitHub</a></li>
+        <li><a href='https://github.com/PsYZiiK/SkEvents/issues'>Issues</a></li>
+      </ul>
+    </div>
+    <div class='right'>
+      <!-- GitHub buttons: see http://ghbtns.com -->
+      <iframe src="http://ghbtns.com/github-btn.html?user=PsYZiiK&amp;repo=SkEvents&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+    </div>
+  </div>
+
+  <div class='content-root'>
+    <div class='menubar'>
+      <div class='menu section' role='flatdoc-menu'></div>
+    </div>
+    <div role='flatdoc-content' class='content'></div>
+  </div>
+
+</body>
+</html>
